# scubagear-pricefinder

./: LICENSE  pyproject.toml  scubagear.db
scripts/: run_scraper.py
src/scubagear_pricefinder/: config.py
src/scubagear_pricefinder/api/: main.py  models.py
src/scubagear_pricefinder/api/routes/: products.py
src/scubagear_pricefinder/db/: connection.py  models.py
src/scubagear_pricefinder/scraper/: base.py
src/scubagear_pricefinder/scraper/retailers/: subacquea_it.py
